--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ dependencies:
   get: ^4.6.6
   flutter_form_builder: ^9.5.0
   form_field_validator: ^1.1.0
+  cloud_firestore: ^5.5.0
+  geolocator: ^13.0.2
 
 dependency_overrides:
   http: 1.2.2
