--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   form_field_validator: ^1.1.0
   cloud_firestore: ^5.5.0
   geolocator: ^13.0.2
+  firebase_storage: ^12.3.6
 
 dependency_overrides:
   http: 1.2.2
