--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   geolocator: ^13.0.2
   firebase_storage: ^12.3.6
+  flutter_riverpod: ^2.6.1
 
 dependency_overrides:
   http: 1.2.2
