--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  health: ^11.0.0
+  permission_handler: ^11.1.0
   flutter_localizations:
     sdk: flutter
   flutter_web_plugins:
@@ -39,8 +41,9 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
-  intl: 0.19.0
+  intl: ^0.19.0
   json_path: 0.7.2
+  lottie: 3.0.0
   page_transition: 2.1.0
   path_provider: 2.1.4
   path_provider_android: 2.2.10
@@ -104,6 +107,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/tick.json
     - assets/fonts/
     - assets/images/
     - assets/videos/
@@ -139,4 +143,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
