working health data controller

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  
+  # Health Connect dependencies
+  health_connect: ^0.0.0
+  
   auto_size_text: 3.0.0
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
