--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   
   # Health Connect dependencies
-  health_connect: ^0.0.0
+  # health_connect: ^0.0.0
   
   auto_size_text: 3.0.0
   cached_network_image: 3.4.1
@@ -87,6 +87,8 @@ dependencies:
   geolocator: ^13.0.2
   firebase_storage: ^12.3.6
   flutter_riverpod: ^2.6.1
+  # flutter_local_notifications: ^16.3.0
+  timezone: ^0.9.2
 
 dependency_overrides:
   http: 1.2.2
